# ponc

./: .clang-tidy  .clangd  .cppcheck  .gitignore  CMakeLists.txt  LICENSE  README.md  build_win32.bat  conanfile.txt  conanprofile.txt
src/: CMakeLists.txt  builders.cpp  drawing.cpp  esc_app.cc  esc_app_impl.cc  esc_app_state.cc  esc_auto_incrementable.cc  esc_builders.cc  esc_cpp.cc  esc_drawing.cc  esc_editor_context_handle.cc  esc_enums.cc  esc_example.cc  esc_left_pane.cc  esc_left_panel.cc  esc_node_drawer.cc  esc_nodes_and_links.cc  esc_state.cc  esc_textures_handle.cc  esc_types.cc  esc_widgets.cc  example.cc  main.cc  main_linux.cc  main_windows.cc  widgets.cpp
src/app/: app_app.cc  app_app_impl.cc  app_editor_context_handle.cc  app_event_queue.cc  app_events.cc  app_globals.cc  app_impl.cc  app_node_drawer.cc  app_state.cc  app_textures_handle.cc
src/app/family/: core_free_pin_family.cc  core_placeholder_family.cc
src/app/family_group/: app_attenuator_family_group.cc  app_client_family_group.cc  app_coupler_family_group.cc  app_free_pin_family_group.cc  app_input_family_group.cc  app_splitter_family_group.cc
src/app/generation/: app_input_generation.cc
src/app/node/: app_attenuator_node.cc  app_client_node.cc  app_coupler_node.cc  app_input_node.cc  app_splitter_node.cc  impl_attenuator_node.cc  impl_client_node.cc  impl_coupler_node.cc  impl_input_node.cc  impl_splitter_node.cc
src/calc/: calc_calculation_task.cc  calc_calculator.cc  calc_resolution.cc  calc_settings.cc  calc_tree_node.cc
src/core/: core_app.cc  core_diagram.cc  core_flow_calculator.cc  core_free_pin_family_group.cc  core_gradient.cc  core_group.cc  core_hub_family_group.cc  core_i_family.cc  core_i_family_group.cc  core_i_node.cc  core_i_node_factory.cc  core_id_generator.cc  core_id_ptr.cc  core_link.cc  core_node.cc  core_pin.cc  core_placeholder_family.cc  core_project.cc  core_settings.cc  core_tag.cc  core_tags.cc  core_version.cc
src/core/family/: core_free_pin_family.cc  core_placeholder_family.cc
src/core/flow/: core_flow.cc  core_flow_calculator.cc  core_tree.cc
src/core/node/: core_client_node.cc  core_coupler_node.cc  core_input_node.cc  core_splitter_node.cc
src/core/pin/: core_empty_pin.cc  core_float_pin.cc  core_flow_pin.cc
src/coreui/: coreui_area_creator.cc  coreui_calculator.cc  coreui_cloner.cc  coreui_creation.cc  coreui_diagram.cc  coreui_event_loop.cc  coreui_family.cc  coreui_handmade_link.cc  coreui_i_family_drawer.cc  coreui_i_family_traits.cc  coreui_i_node_drawer.cc  coreui_i_node_traits.cc  coreui_i_pin_drawer.cc  coreui_i_pin_traits.cc  coreui_link_creation.cc  coreui_linker.cc  coreui_linking.cc  coreui_log.cc  coreui_native_facade.cc  coreui_node.cc  coreui_node_mover.cc  coreui_node_replacer.cc  coreui_pin.cc  coreui_project.cc  coreui_tags.cc  coreui_textures_handle.cc  frame_node.cc
src/coreui/event/: coreui_event.cc  coreui_event_loop.cc
src/coreui/pin/: coreui_empty_pin_drawer.cc  coreui_flow_input_pin_drawer.cc  coreui_flow_output_pin_drawer.cc  coreui_flow_pin_drawer.cc  coreui_flow_pin_traits.cc
src/coreui/traits/: coreui_empy_pin_traits.cc  coreui_float_pin_traits.cc  coreui_flow_pin_traits.cc  coreui_i_family_traits.cc  coreui_i_header_traits.cc  coreui_i_node_traits.cc  coreui_i_pin_traits.cc
src/cpp/: cpp_assert.cc  cpp_scope_function.cc  cpp_vector_bool.cc
src/draw/: app_node_drawer.cc  draw_constants.cc  draw_delete_items_process.cc  draw_families_view.cc  draw_flow_tree_view.cc  draw_group_settings_view.cc  draw_groups.cc  draw_groups_view.cc  draw_help_marker.cc  draw_i_drawable.cc  draw_i_family_drawer.cc  draw_i_file_dialog.cc  draw_i_node_drawer.cc  draw_i_pin_drawer.cc  draw_i_popup.cc  draw_link_being_repinned.cc  draw_link_connection_process.cc  draw_links.cc  draw_main_menu_bar.cc  draw_main_window.cc  draw_menu_bar.cc  draw_native_facade.cc  draw_node_drawer.cc  draw_node_factories_view.cc  draw_nodes.cc  draw_nodes_view.cc  draw_open_file_dialog.cc  draw_recent_log.cc  draw_rename_widget.cc  draw_repin_curve.cc  draw_save_as_file_dialog.cc  draw_settings_view.cc  draw_state.cc  draw_string_buffer.cc  draw_tooltip.cc  draw_widgets.cc
src/draw/diagram/: draw_area.cc  draw_area_creator.cc  draw_colored_text.cc  draw_diagram.cc  draw_diagram_editor.cc  draw_flow_icon.cc  draw_handmade_link.cc  draw_item_deleter.cc  draw_link.cc  draw_link_creation.cc  draw_linker.cc  draw_linking.cc  draw_links.cc  draw_node.cc  draw_nodes.cc  draw_tags.cc  draw_tooltip.cc
src/draw/dialog/: draw_about_dialog.cc  draw_i_file_dialog.cc  draw_new_project_dialog.cc  draw_open_file_dialog.cc  draw_question_dialog.cc  draw_save_as_file_dialog.cc
src/draw/editor/: draw_creation.cc  draw_flow_icon.cc  draw_groups.cc  draw_handmade_link.cc  draw_link.cc  draw_link_being_repinned.cc  draw_link_creation.cc  draw_links.cc  draw_new_link.cc  draw_node.cc  draw_node_editor.cc  draw_nodes.cc  draw_popups.cc
src/draw/pin/: draw_empty_pin_drawer.cc  draw_flow_input_pin_drawer.cc  draw_flow_output_pin_drawer.cc
src/draw/popup/: draw_background_popup.cc  draw_link_popup.cc  draw_node_popup.cc  draw_popups.cc
src/draw/view/: draw_calculator_view.cc  (+15 more)
src/flow/: flow_algorithms.cc  flow_calculator.cc  flow_node_flow.cc  flow_tree.cc  flow_tree_traversal.cc
src/frame/: frame_node.cc
src/impl/: impl_attenuator_node.cc  impl_client_node.cc  impl_coupler_node.cc  impl_hub_node.cc  impl_input_node.cc  impl_splitter_node.cc
src/json/: json_area_serializer.cc  json_color_serializer.cc  json_connection_serializer.cc  json_diagram_serializer.cc  json_global_serializer.cc  json_group_serializer.cc  json_i_family_parser.cc  json_i_family_writer.cc  json_i_node_factory_parser.cc  json_i_node_factory_writer.cc  json_i_node_parser.cc  json_i_node_writer.cc  json_link_serializer.cc  json_node_factory_serializer.cc  json_node_serializer.cc  json_project_serializer.cc  json_settings_serializer.cc  json_tag_serializer.cc  json_versifier.cc
src/style/: style_tailwind_colors.cc  style_update_styles.cc  style_utils.cc
src/ui/: ui_node_drawer.cc
(+386 files in other folders)
